// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xy_expression XYChart component it renders area 1`] = `
<Chart
  renderer="canvas"
>
  <Connect(spec)
    legendPosition="top"
    onBrushEnd={[Function]}
    onElementClick={[Function]}
    rotation={0}
    showLegend={false}
    showLegendExtra={false}
    theme={Object {}}
  />
  <Connect(spec)
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title="c"
  />
  <Connect(spec)
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <Connect(spec)
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    id="d"
    key="0"
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "a",
        "b",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders bar 1`] = `
<Chart
  renderer="canvas"
>
  <Connect(spec)
    legendPosition="top"
    onBrushEnd={[Function]}
    onElementClick={[Function]}
    rotation={0}
    showLegend={false}
    showLegendExtra={false}
    theme={Object {}}
  />
  <Connect(spec)
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title="c"
  />
  <Connect(spec)
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <Connect(spec)
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    id="d"
    key="0"
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "a",
        "b",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders horizontal bar 1`] = `
<Chart
  renderer="canvas"
>
  <Connect(spec)
    legendPosition="top"
    onBrushEnd={[Function]}
    onElementClick={[Function]}
    rotation={90}
    showLegend={false}
    showLegendExtra={false}
    theme={Object {}}
  />
  <Connect(spec)
    id="x"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title="c"
  />
  <Connect(spec)
    id="y"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <Connect(spec)
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    id="d"
    key="0"
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "a",
        "b",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders line 1`] = `
<Chart
  renderer="canvas"
>
  <Connect(spec)
    legendPosition="top"
    onBrushEnd={[Function]}
    onElementClick={[Function]}
    rotation={0}
    showLegend={false}
    showLegendExtra={false}
    theme={Object {}}
  />
  <Connect(spec)
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title="c"
  />
  <Connect(spec)
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <Connect(spec)
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    id="d"
    key="0"
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "a",
        "b",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked area 1`] = `
<Chart
  renderer="canvas"
>
  <Connect(spec)
    legendPosition="top"
    onBrushEnd={[Function]}
    onElementClick={[Function]}
    rotation={0}
    showLegend={false}
    showLegendExtra={false}
    theme={Object {}}
  />
  <Connect(spec)
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title="c"
  />
  <Connect(spec)
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <Connect(spec)
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    id="d"
    key="0"
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "a",
        "b",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked bar 1`] = `
<Chart
  renderer="canvas"
>
  <Connect(spec)
    legendPosition="top"
    onBrushEnd={[Function]}
    onElementClick={[Function]}
    rotation={0}
    showLegend={false}
    showLegendExtra={false}
    theme={Object {}}
  />
  <Connect(spec)
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title="c"
  />
  <Connect(spec)
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <Connect(spec)
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    id="d"
    key="0"
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "a",
        "b",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked horizontal bar 1`] = `
<Chart
  renderer="canvas"
>
  <Connect(spec)
    legendPosition="top"
    onBrushEnd={[Function]}
    onElementClick={[Function]}
    rotation={90}
    showLegend={false}
    showLegendExtra={false}
    theme={Object {}}
  />
  <Connect(spec)
    id="x"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title="c"
  />
  <Connect(spec)
    id="y"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <Connect(spec)
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": "I",
          "d": "Foo",
        },
        Object {
          "a": 1,
          "b": 5,
          "c": "J",
          "d": "Bar",
        },
      ]
    }
    enableHistogramMode={false}
    id="d"
    key="0"
    name={[Function]}
    splitSeriesAccessors={
      Array [
        "d",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "a",
        "b",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;
